Updated initial model implementation

--- a/train.ipynb
+++ b/train.ipynb
@@ -66,9 +66,33 @@
     "val_dataset = ObjectDetectionDataset(val_entries, single_class=SINGLE_CLASS, config=config)\n",
     "test_dataset = ObjectDetectionDataset(test_entries, single_class=SINGLE_CLASS, config=config)\n",
     "\n",
-    "print(f\"Number TRAIN of entries: {len(train_dataset)} | positive {train_dataset.num_positive} | negative {train_dataset.num_negative}\")\n",
-    "print(f\"Number VAL of entries: {len(val_dataset)} | positive {val_dataset.num_positive} | negative {val_dataset.num_negative}\")\n",
-    "print(f\"Number TEST of entries: {len(test_dataset)} | positive {test_dataset.num_positive} | negative {test_dataset.num_negative}\")"
+    "num_positive_entries = train_dataset.num_positive + val_dataset.num_positive + test_dataset.num_positive\n",
+    "num_negative_entries = train_dataset.num_negative + val_dataset.num_negative + test_dataset.num_negative\n",
+    "objects_per_entry = [len(entry.annotations)for entry in entries]\n",
+    "total_objects = sum(objects_per_entry)\n",
+    "max_objects = max(objects_per_entry)\n",
+    "\n",
+    "print(f\"Total number of entries: {len(entries)}\")\n",
+    "print(f\"Total number of positive entries: {num_positive_entries} ({num_positive_entries / len(entries) * 100:.2f}%)\")\n",
+    "print(f\"Total number of negative entries: {num_negative_entries} ({num_negative_entries / len(entries) * 100:.2f}%)\")\n",
+    "print(f\"Total number of unique objects (cars): {total_objects}\")\n",
+    "print(f\"Average number of objects per positive entry: {total_objects / num_positive_entries:.2f}\")\n",
+    "print(f\"Max number of objects in an entry: {max_objects}\")\n",
+    "print(train_dataset.describe(\"TRAIN\"))\n",
+    "print(val_dataset.describe(\"VAL\"))\n",
+    "print(test_dataset.describe(\"TEST\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "max_annotation_entry = max(entries, key=lambda x: len(x.annotations), default=None)\n",
+    "\n",
+    "if max_annotation_entry is not None:\n",
+    "    plot_entries_original_and_annotated([max_annotation_entry], samples_to_display=1)"
    ]
   },
   {
@@ -87,9 +111,9 @@
    "outputs": [],
    "source": [
     "batch_size = config[\"batch_size\"]\n",
-    "train_dataloader = DataLoader(train_dataset, batch_size=batch_size, shuffle=False)\n",
-    "val_dataloader = DataLoader(val_dataset, batch_size=batch_size, shuffle=False)\n",
-    "test_dataloader = DataLoader(test_dataset, batch_size=batch_size, shuffle=False)"
+    "train_dataloader = DataLoader(train_dataset, batch_size=batch_size, shuffle=False, pin_memory=True)\n",
+    "val_dataloader = DataLoader(val_dataset, batch_size=batch_size, shuffle=False, pin_memory=True)\n",
+    "test_dataloader = DataLoader(test_dataset, batch_size=batch_size, shuffle=False, pin_memory=True)"
    ]
   },
   {
@@ -122,7 +146,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "trainer.evaluate(train_dataloader)"
+    "trainer.evaluate(test_dataloader)"
    ]
   }
  ],
