Added additional metrics computation.

--- a/train.ipynb
+++ b/train.ipynb
@@ -146,7 +146,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "trainer.evaluate(test_dataloader)"
+    "trainer.evaluate(test_dataloader, iou_threshold=0.5, threshold=0.4)"
    ]
   }
  ],
