--- a/train.ipynb
+++ b/train.ipynb
@@ -18,7 +18,9 @@
     "from src.utils import load_config\n",
     "\n",
     "print(\"Pytorch version:\", torch.__version__)\n",
-    "print(\"CUDA enabled:\", torch.cuda.is_available())"
+    "print(\"CUDA enabled:\", torch.cuda.is_available())\n",
+    "if torch.cuda.is_available():\n",
+    "    print(\"Device:\", torch.cuda.get_device_name())"
    ]
   },
   {
