Updated tensorboard logging and minor fixes.

--- a/train.ipynb
+++ b/train.ipynb
@@ -45,6 +45,8 @@
     "config = load_config(CONFIG_PATH)\n",
     "seed = config[\"seed\"]\n",
     "torch.manual_seed(seed)\n",
+    "torch.cuda.manual_seed(seed)\n",
+    "torch.cuda.manual_seed_all(seed)\n",
     "config"
    ]
   },
