Updated model; data processing, inference, architecture.

--- a/train.ipynb
+++ b/train.ipynb
@@ -12,10 +12,14 @@
     "from torch.utils.data import DataLoader\n",
     "\n",
     "from src.data.dataset import ObjectDetectionDataset\n",
-    "from src.data.entry import read_entries_from_directory, split_entries_train_val_test\n",
-    "from src.data.visualize import plot_entries_original_and_annotated\n",
+    "from src.data.entry import (\n",
+    "    read_entries_from_directory,\n",
+    "    split_entries_train_val_test,\n",
+    "    equalize_positive_negative_entries\n",
+    ")\n",
+    "from src.data.visualize import plot_entries_original_and_annotated, plot_entry\n",
     "from src.trainer import Trainer\n",
-    "from src.utils import load_config\n",
+    "from src.utils import load_config, seed_everything\n",
     "\n",
     "print(\"Pytorch version:\", torch.__version__)\n",
     "print(\"CUDA enabled:\", torch.cuda.is_available())\n",
@@ -30,35 +34,30 @@
    "outputs": [],
    "source": [
     "DEVICE = torch.device(\"cuda\" if torch.cuda.is_available else \"cpu\")\n",
-    "DATASET_DIR = Path(\"C:/Users/robert/Desktop/sem1/NN/datasets/DetectionPatches_512x512_ALL\")\n",
+    "DATASET_DIR = Path(\"C:/Users/robert/Desktop/sem1/NN/datasets/DetectionPatches_512x512_ALL_No-Overlap\")\n",
     "CHECKPOINT_DIR = Path(\"models\")\n",
     "CONFIG_PATH = Path(\"config.json\")\n",
-    "SINGLE_CLASS = True"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "config = load_config(CONFIG_PATH)\n",
-    "seed = config[\"seed\"]\n",
-    "torch.manual_seed(seed)\n",
-    "torch.cuda.manual_seed(seed)\n",
-    "torch.cuda.manual_seed_all(seed)\n",
+    "seed_everything(config[\"seed\"])\n",
     "config"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
    "outputs": [],
    "source": [
-    "entries = read_entries_from_directory(DATASET_DIR)\n",
-    "train_entries, val_entries, test_entries = split_entries_train_val_test(entries, seed=seed)"
-   ]
+    "entries = read_entries_from_directory(\n",
+    "    data_dir=DATASET_DIR,\n",
+    "    leave_out_negatives=True,\n",
+    "    patch_size=config[\"image_size\"],\n",
+    ")\n",
+    "entries = equalize_positive_negative_entries(entries)\n",
+    "train_entries, val_entries, test_entries = split_entries_train_val_test(entries)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
@@ -66,22 +65,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_dataset = ObjectDetectionDataset(train_entries, single_class=SINGLE_CLASS, config=config)\n",
-    "val_dataset = ObjectDetectionDataset(val_entries, single_class=SINGLE_CLASS, config=config)\n",
-    "test_dataset = ObjectDetectionDataset(test_entries, single_class=SINGLE_CLASS, config=config)\n",
+    "full_dataset = ObjectDetectionDataset(entries, config=config)\n",
+    "train_dataset = ObjectDetectionDataset(train_entries, config=config)\n",
+    "val_dataset = ObjectDetectionDataset(val_entries, config=config)\n",
+    "test_dataset = ObjectDetectionDataset(test_entries, config=config)\n",
     "\n",
-    "num_positive_entries = train_dataset.num_positive + val_dataset.num_positive + test_dataset.num_positive\n",
-    "num_negative_entries = train_dataset.num_negative + val_dataset.num_negative + test_dataset.num_negative\n",
-    "objects_per_entry = [len(entry.annotations) for entry in entries]\n",
-    "total_objects = sum(objects_per_entry)\n",
-    "max_objects = max(objects_per_entry)\n",
-    "\n",
-    "print(f\"Total number of entries: {len(entries)}\")\n",
-    "print(f\"Total number of positive entries: {num_positive_entries} ({num_positive_entries / len(entries) * 100:.2f}%)\")\n",
-    "print(f\"Total number of negative entries: {num_negative_entries} ({num_negative_entries / len(entries) * 100:.2f}%)\")\n",
-    "print(f\"Total number of unique objects (cars): {total_objects}\")\n",
-    "print(f\"Average number of objects per positive entry: {total_objects / num_positive_entries:.2f}\")\n",
-    "print(f\"Max number of objects in an entry: {max_objects}\")\n",
+    "print(full_dataset.describe(\"FULL\"))\n",
     "print(train_dataset.describe(\"TRAIN\"))\n",
     "print(val_dataset.describe(\"VAL\"))\n",
     "print(test_dataset.describe(\"TEST\"))"
@@ -96,16 +85,7 @@
     "max_annotation_entry = max(entries, key=lambda x: len(x.annotations), default=None)\n",
     "\n",
     "if max_annotation_entry is not None:\n",
-    "    plot_entries_original_and_annotated([max_annotation_entry], samples_to_display=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plot_entries_original_and_annotated(train_dataset.entries, samples_to_display=1)"
+    "    plot_entries_original_and_annotated([max_annotation_entry], samples_to_display=1, linewidth=1)"
    ]
   },
   {
@@ -150,7 +130,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "trainer.evaluate(test_dataloader, iou_threshold=0.5, threshold=0.4)"
+    "trainer.evaluate(train_dataloader, iou_threshold=0.5, threshold=0.4)"
    ]
   }
  ],
