Updated model; added training data transformation, removed class computation, changed loss function, fixed metrics calculations.

--- a/train.ipynb
+++ b/train.ipynb
@@ -15,9 +15,9 @@
     "from src.data.entry import (\n",
     "    read_entries_from_directory,\n",
     "    split_entries_train_val_test,\n",
-    "    equalize_positive_negative_entries\n",
+    "    equalize_negative_samples_with_positives\n",
     ")\n",
-    "from src.data.visualize import plot_entries_original_and_annotated, plot_entry\n",
+    "from src.data.visualize import plot_entries_original_and_annotated\n",
     "from src.trainer import Trainer\n",
     "from src.utils import load_config, seed_everything\n",
     "\n",
@@ -38,7 +38,7 @@
     "CHECKPOINT_DIR = Path(\"models\")\n",
     "CONFIG_PATH = Path(\"config.json\")\n",
     "config = load_config(CONFIG_PATH)\n",
-    "seed_everything(config[\"seed\"])\n",
+    "seed_everything(seed=config[\"seed\"])\n",
     "config"
    ]
   },
@@ -52,7 +52,7 @@
     "    leave_out_negatives=True,\n",
     "    patch_size=config[\"image_size\"],\n",
     ")\n",
-    "entries = equalize_positive_negative_entries(entries)\n",
+    "entries = equalize_negative_samples_with_positives(entries)\n",
     "train_entries, val_entries, test_entries = split_entries_train_val_test(entries)"
    ],
    "metadata": {
@@ -130,7 +130,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "trainer.evaluate(train_dataloader, iou_threshold=0.5, threshold=0.4)"
+    "trainer.evaluate(test_dataloader, iou_threshold=0.5, threshold=0.4)"
    ]
   }
  ],
