Updated model; minor refactoring.

--- a/train.ipynb
+++ b/train.ipynb
@@ -17,6 +17,7 @@
     "    split_entries_train_val_test,\n",
     "    equalize_negative_samples_with_positives\n",
     ")\n",
+    "from src.data.transforms import get_inference_transform, get_training_transform\n",
     "from src.data.visualize import plot_entries_original_and_annotated\n",
     "from src.trainer import Trainer\n",
     "from src.utils import load_config, seed_everything\n",
@@ -65,10 +66,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "full_dataset = ObjectDetectionDataset(entries, config=config)\n",
-    "train_dataset = ObjectDetectionDataset(train_entries, config=config)\n",
-    "val_dataset = ObjectDetectionDataset(val_entries, config=config)\n",
-    "test_dataset = ObjectDetectionDataset(test_entries, config=config)\n",
+    "train_transform = get_training_transform(config[\"image_size\"], config[\"in_channels\"])\n",
+    "test_transform = get_inference_transform(config[\"image_size\"], config[\"in_channels\"])\n",
+    "\n",
+    "full_dataset = ObjectDetectionDataset(entries, config=config, transforms=test_transform)\n",
+    "train_dataset = ObjectDetectionDataset(train_entries, config=config, transforms=train_transform)\n",
+    "val_dataset = ObjectDetectionDataset(val_entries, config=config, transforms=test_transform)\n",
+    "test_dataset = ObjectDetectionDataset(test_entries, config=config, transforms=test_transform)\n",
     "\n",
     "print(full_dataset.describe(\"FULL\"))\n",
     "print(train_dataset.describe(\"TRAIN\"))\n",
@@ -79,7 +83,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
    "outputs": [],
    "source": [
     "max_annotation_entry = max(entries, key=lambda x: len(x.annotations), default=None)\n",
