Updated model; simplified computation by removing multiple bbox generation, added IoU metric.

--- a/train.ipynb
+++ b/train.ipynb
@@ -46,6 +46,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "entries = read_entries_from_directory(\n",
@@ -53,12 +56,9 @@
     "    leave_out_negatives=True,\n",
     "    patch_size=config[\"image_size\"],\n",
     ")\n",
-    "entries = equalize_negative_samples_with_positives(entries)\n",
+    "entries = equalize_negative_samples_with_positives(entries, fraction=0)\n",
     "train_entries, val_entries, test_entries = split_entries_train_val_test(entries)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
@@ -83,12 +83,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "max_annotation_entry = max(entries, key=lambda x: len(x.annotations), default=None)\n",
     "\n",
     "if max_annotation_entry is not None:\n",
-    "    plot_entries_original_and_annotated([max_annotation_entry], samples_to_display=1, linewidth=1)"
+    "    plot_entries_original_and_annotated([max_annotation_entry], annotation_style=\"circle\")"
    ]
   },
   {
