Updated config and notebook for training.

--- a/train.ipynb
+++ b/train.ipynb
@@ -14,8 +14,8 @@
     "from src.data.dataset import ObjectDetectionDataset\n",
     "from src.data.entry import (\n",
     "    read_entries_from_directory,\n",
-    "    split_entries_train_val_test,\n",
-    "    equalize_negative_samples_with_positives\n",
+    "    pre_process_entries,\n",
+    "    split_entries_train_val_test\n",
     ")\n",
     "from src.data.transforms import get_inference_transform, get_training_transform\n",
     "from src.data.visualize import plot_entries_original_and_annotated\n",
@@ -35,10 +35,7 @@
    "outputs": [],
    "source": [
     "DEVICE = torch.device(\"cuda\" if torch.cuda.is_available else \"cpu\")\n",
-    "DATASET_DIR = Path(\"C:/Users/robert/Desktop/sem1/NN/datasets/DetectionPatches_512x512_ALL_No-Overlap\")\n",
-    "CHECKPOINT_DIR = Path(\"models\")\n",
-    "CONFIG_PATH = Path(\"config.json\")\n",
-    "config = load_config(CONFIG_PATH)\n",
+    "config = load_config()\n",
     "seed_everything(seed=config[\"seed\"])\n",
     "config"
    ]
@@ -52,11 +49,12 @@
    "outputs": [],
    "source": [
     "entries = read_entries_from_directory(\n",
-    "    data_dir=DATASET_DIR,\n",
-    "    leave_out_negatives=True,\n",
+    "    data_dir=Path(config[\"dataset_dir\"]),\n",
+    "    leave_out_negatives=False,\n",
     "    patch_size=config[\"image_size\"],\n",
     ")\n",
-    "entries = equalize_negative_samples_with_positives(entries, fraction=0)\n",
+    "entries = pre_process_entries(entries, negative_fraction=0.0)\n",
+    "\n",
     "train_entries, val_entries, test_entries = split_entries_train_val_test(entries)"
    ]
   },
@@ -114,8 +112,8 @@
     "    config=config,\n",
     "    dataloaders=(train_dataloader, val_dataloader, test_dataloader),\n",
     "    device=DEVICE,\n",
-    "    save_dir=CHECKPOINT_DIR,\n",
-    "    checkpoint_path=None\n",
+    "    save_dir=Path(config[\"save_dir\"]),\n",
+    "    checkpoint_path=Path(config[\"checkpoint\"]) if config[\"checkpoint\"] else None\n",
     ")"
    ]
   },
@@ -134,7 +132,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "trainer.evaluate(test_dataloader, iou_threshold=0.5, threshold=0.4)"
+    "trainer.evaluate(test_dataloader, iou_threshold=0.5, threshold=0.5)"
    ]
   }
  ],
